--- a/src/app/modules/tracking/tracking-view/tracking-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.scss
@@ -14,13 +14,13 @@ $stepper-gray: #c5ced8;
         color: #0a3d85;
         font-weight: 700;
         font-size: 22px;
-        margin: 0 0 12px;
+        margin: 16px 0 12px;
     }
 
     .tracking-back-row {
         display: flex;
-        margin-top: 16px;
-        margin-bottom: 24px;
+        margin-top: 0;
+        margin-bottom: 0;
         margin-left: 0;
     }
 
@@ -707,7 +707,7 @@ $stepper-gray: #c5ced8;
     }
 
     .data-col .tipo {
-        font-weight: 600;
+        font-weight: 500;
         font-size: 14px;
         margin: 0 0 4px;
     }
@@ -715,7 +715,7 @@ $stepper-gray: #c5ced8;
     .data-col .direccion {
         font-size: 13px;
         margin: 0 0 6px;
-        font-weight: 600;
+        font-weight: 400;
         color: #2b2b2b;
     }
 
@@ -766,7 +766,7 @@ $stepper-gray: #c5ced8;
 
     .sub {
         font-size: 14px;
-        font-weight: 600;
+        font-weight: 500;
         margin: 0 0 4px;
     }
 
@@ -830,7 +830,7 @@ $stepper-gray: #c5ced8;
 
     .info-col .nombre {
         font-size: 13px;
-        font-weight: 600;
+        font-weight: 500;
         margin: 0 0 6px;
         line-height: 1.25;
         color: #2b2b2b;
@@ -839,13 +839,13 @@ $stepper-gray: #c5ced8;
     .info-col .cantidad {
         font-size: 12px;
         margin: 0 0 4px;
-        font-weight: 600;
+        font-weight: 500;
         color: #0a3a6b;
     }
 
     .sku-inline {
         font-size: 12px;
-        font-weight: 600;
+        font-weight: 400;
         color: #2b2b2b;
         padding-top: 4px;
     }
